syntax = "proto3";

package synnax.distribution.channel;

import "google/protobuf/empty.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/distribution/channel/pb";

service ChannelCreateService {
  rpc Exec(CreateMessage) returns (CreateMessage) {}
}

service ChannelDeleteService {
  rpc Exec(DeleteRequest) returns (google.protobuf.Empty) {}
}

service ChannelRenameService {
  rpc Exec(RenameRequest) returns (google.protobuf.Empty) {}
}

message CreateOptions {
  bool retrieve_if_name_exists = 1;
  bool overwrite_if_name_exists = 2;
}

message CreateMessage {
  repeated Channel channels = 1;
  CreateOptions opts = 2;
}

message DeleteRequest {
  repeated uint32 keys = 3;
}

message RenameRequest {
  repeated uint32 keys = 1;
  repeated string names = 2;
}

message Channel {
  string name = 1;
  int32 leaseholder = 2;
  string data_type = 3;
  bool is_index = 4;
  uint32 local_key = 5;
  int32 local_index = 6;
  bool virtual = 7;
  uint32 concurrency = 8;
  bool internal = 9;
}
